kubernetes_backup/DR_Kubernetes_backup/shared/config_files/kubernetes/ingress/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: gatewayservice-service
            port:
              number: 8080
